# python-template

./: .gitignore  .travis.yml  Pipfile  README.md  setup.cfg  setup.py  tox.ini
src/example/: __init__.py  calculator.py
tests/: test_calculator.py
